# lab_os_4

doc/: report_os_lab_4.odt
src/: CMakeLists.txt  func.h  implic_1.c  implic_2.c  main_com.c  main_run.c
